Add EspWebSocket implementation
- add initial EspWebSocket impl
- add GPIO-controller ws support

--- a/template/platformio.ini
+++ b/template/platformio.ini
@@ -11,6 +11,7 @@ build_flags =
     -Os -std=gnu++11 -std=c11 -Wall -Wextra
 lib_deps =
     ArduinoJson@6.15.2
+    WebSockets@2.2.1
 
 [env:mhetesp32minikit]
 board = mhetesp32minikit
