Add support for Bearer authentication
- added initial Bearer-controller impl
- updated default monitor speed
- updated default upload speed
- updated DEBUG logging initialization
- migrated from UriRegex to Uri/UriBraces/UriGlob due to extensive mem usage

--- a/template/platformio.ini
+++ b/template/platformio.ini
@@ -4,14 +4,16 @@ lib_extra_dirs = ../lib
 extra_scripts =
     ../extra_scripts/000-cleanup.py
     ../extra_scripts/010-webui.py
-monitor_speed = 115200
+monitor_speed = 74880
 debug_build_flags = ${env.build_flags}
-    -D__DEBUG__ -DMONITOR_SPEED=${env.monitor_speed}
+    -DDEBUG_ESP_PORT=Serial -DMONITOR_SPEED=${env.monitor_speed}
 build_flags =
     -Os -std=gnu++11 -std=c11 -Wall -Wextra
 lib_deps =
     ArduinoJson@6.15.2
     WebSockets@2.2.1
+    elapsedMillis@1.0.6
+upload_speed = 1024000
 
 [env:mhetesp32minikit]
 board = mhetesp32minikit
@@ -20,7 +22,7 @@ monitor_filters = esp32_exception_decoder
 lib_deps = ${env.lib_deps}
     ESP32 AnalogWrite@0.2
 platform_packages =
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git # 4d98cea085d619bed7026b37071bd8402a485d95
 
 [env:d1_mini]
 board = d1_mini
@@ -29,4 +31,4 @@ monitor_filters = esp8266_exception_decoder
 build_unflags = -std=gnu++17 -std=c17
 board_build.filesystem = littlefs
 platform_packages =
-    framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
+    framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git # 01edc0e51f5507e3129b74c8895573c80f99f711
