--- a/template/platformio.ini
+++ b/template/platformio.ini
@@ -4,30 +4,38 @@ lib_extra_dirs = ../lib
 extra_scripts =
     ../extra_scripts/000-cleanup.py
     ../extra_scripts/010-webui.py
-monitor_speed = 74880
 debug_build_flags = ${env.build_flags}
-    -DDEBUG_ESP_PORT=Serial -DMONITOR_SPEED=${env.monitor_speed}
+    -DDEBUG_ESP_PORT=Serial
 build_flags =
-    -Os -std=gnu++11 -std=c11 -Wall -Wextra
+    -Os -std=gnu++11 -std=gnu11 -Wall -Wextra
 lib_deps =
-    ArduinoJson@6.15.2
-    WebSockets@2.2.1
-    elapsedMillis@1.0.6
+    ArduinoJson @ 6.15.2
+    WebSockets @ 2.2.1
+    elapsedMillis @ 1.0.6
+    makuna/NeoPixelBus @ 2.6.0
 upload_speed = 1024000
+check_flags =
+    cppcheck: --suppress=*:*/.pio/libdeps/*/NeoPixelBus/*
 
 [env:mhetesp32minikit]
 board = mhetesp32minikit
 platform = espressif32
+monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
+debug_build_flags = ${env.debug_build_flags}
+    -DMONITOR_SPEED=${env:mhetesp32minikit.monitor_speed}
 lib_deps = ${env.lib_deps}
-    ESP32 AnalogWrite@0.2
+    ESP32 AnalogWrite @ 0.2
 platform_packages =
     framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#4d98cea085d619bed7026b37071bd8402a485d95
 
 [env:d1_mini]
 board = d1_mini
 platform = espressif8266
+monitor_speed = 74880
 monitor_filters = esp8266_exception_decoder
+debug_build_flags = ${env.debug_build_flags}
+    -DMONITOR_SPEED=${env:d1_mini.monitor_speed}
 build_unflags = -std=gnu++17 -std=c17
 board_build.filesystem = littlefs
 platform_packages =
