Add pixel BLE support
- refactored FS handling to repositories
- refactored pixel animation handling
- added new pixel animation modifiers
- added light-ble project for ESP32 BLE
- dropped pixel ws supports
- bumped ESP sdk version

--- a/template/platformio.ini
+++ b/template/platformio.ini
@@ -19,15 +19,13 @@ check_flags =
 
 [env:mhetesp32minikit]
 board = mhetesp32minikit
-platform = espressif32
+platform = espressif32 @ 3.2.0
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 debug_build_flags = ${env.debug_build_flags}
     -DMONITOR_SPEED=${env:mhetesp32minikit.monitor_speed}
 lib_deps = ${env.lib_deps}
     ESP32 AnalogWrite @ 0.2
-platform_packages =
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#4d98cea085d619bed7026b37071bd8402a485d95
 
 [env:d1_mini]
 board = d1_mini
