--- a/lights-ble/platformio.ini
+++ b/lights-ble/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =
     elapsedMillis @ 1.0.6
     makuna/NeoPixelBus @ 2.6.9
     mathertel/OneButton @ 2.0.3
+    h2zero/NimBLE-Arduino @ 1.3.4
 platform = espressif32 @ 3.4.0
 
 [env:mhetesp32minikit]
