--- a/lights-ble/platformio.ini
+++ b/lights-ble/platformio.ini
@@ -1,5 +1,5 @@
 [env]
-;build_type = debug
+build_type = debug
 framework = arduino
 upload_speed = 1024000
 monitor_speed = 115200
@@ -9,8 +9,7 @@ check_flags =
 build_flags =
     -Os -std=gnu++11 -std=gnu11 -Wall -Wextra
 debug_build_flags = ${env.build_flags}
-    -DMONITOR_SPEED=${env.monitor_speed}
-    -DDEBUG_ESP_PORT=Serial
+    -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO
    '-DBLE_NAME=\"Ambient\"'
     -DBLE_SECRET=223344
 src_build_flags =
