--- a/template/platformio.ini
+++ b/template/platformio.ini
@@ -23,6 +23,7 @@ platform = espressif32 @ 3.2.0
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 debug_build_flags = ${env.debug_build_flags}
+    -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO
     -DMONITOR_SPEED=${env:mhetesp32minikit.monitor_speed}
 lib_deps = ${env.lib_deps}
     ESP32 AnalogWrite @ 0.2
