--- a/lights-ble/platformio.ini
+++ b/lights-ble/platformio.ini
@@ -8,6 +8,10 @@ check_flags =
     cppcheck: --suppress=*:*/.pio/libdeps/*/NeoPixelBus/*
 build_flags =
     -Os -std=gnu++11 -std=gnu11 -Wall -Wextra
+    -DCONFIG_BT_NIMBLE_MAX_CCCDS=16
+    -DCONFIG_BT_NIMBLE_MAX_CONNECTIONS=3
+    -DCONFIG_BT_NIMBLE_ROLE_CENTRAL_DISABLED
+    -DCONFIG_BT_NIMBLE_ROLE_OBSERVER_DISABLED
 debug_build_flags = ${env.build_flags}
     -DMONITOR_SPEED=${env.monitor_speed}
     -DDEBUG_ESP_PORT=Serial
@@ -21,8 +25,8 @@ lib_deps =
     elapsedMillis @ 1.0.6
     makuna/NeoPixelBus @ 2.6.9
     mathertel/OneButton @ 2.0.3
-    h2zero/NimBLE-Arduino @ 1.3.4
-platform = espressif32 @ 3.4.0
+    h2zero/NimBLE-Arduino @ 1.3.7
+platform = espressif32 @ 3.5.0
 
 [env:mhetesp32minikit]
 board = mhetesp32minikit
